--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "lint": "eslint ./src/scripts/**/*.js",
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --host 192.168.0.75",
     "server": "nodemon ./src/server index.js",
     "prod": "rimraf ./dist/* && cross-env NODE_ENV=production webpack -p"
   },
@@ -33,7 +33,6 @@
     "file-loader": "^0.11.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
-    "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "style-loader": "^0.16.0",
     "stylus": "^0.54.5",
@@ -51,6 +50,15 @@
     "safari": 7
   },
   "dependencies": {
-    "material-ui": "^0.19.4"
+    "axios": "^0.17.1",
+    "material-ui": "^0.19.4",
+    "object-assign": "^4.1.1",
+    "react": "15.5.3",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "5.0.0-alpha.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
