--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "material-ui": "^0.19.4",
     "object-assign": "^4.1.1",
     "react": "15.5.3",
+    "react-custom-scrollbars": "^4.2.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
