--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.2.0"
   }
