--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "eslint-config-prettier": "^2.7.0",
     "material-ui": "^0.19.4",
     "object-assign": "^4.1.1",
     "react": "15.5.3",
