--- a/package.json
+++ b/package.json
@@ -1,68 +1,69 @@
 {
-  "name": "aspire-webpack",
-  "version": "1.0.0",
-  "description": "Webpack project starter kit",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Aspirationtocode/aspire-webpack"
-  },
-  "scripts": {
-    "lint": "eslint ./src/scripts/**/*.js",
-    "dev": "webpack-dev-server --host 192.168.0.75",
-    "server": "nodemon ./src/server index.js",
-    "prod": "rimraf ./dist/* && cross-env NODE_ENV=production webpack -p"
-  },
-  "author": "Evgeny Kulazhskiy",
-  "license": "ISC",
-  "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-react": "^6.24.1",
-    "cross-env": "^3.2.4",
-    "css-loader": "^0.27.3",
-    "css-sourcemaps-webpack-plugin": "^1.0.3",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-airbnb-base": "^11.1.2",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.0",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "react-dom": "^15.5.3",
-    "style-loader": "^0.16.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "webpack": "^2.3.1",
-    "webpack-dev-server": "^2.4.2"
-  },
-  "browsers": {
-    "android": 4,
-    "chrome": 42,
-    "firefox": 37,
-    "ie": 10,
-    "ios": 7,
-    "opera": 28,
-    "safari": 7
-  },
-  "dependencies": {
-    "axios": "^0.17.1",
-    "eslint-config-prettier": "^2.7.0",
-    "material-ui": "^0.19.4",
-    "object-assign": "^4.1.1",
-    "react": "15.5.3",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "5.0.0-alpha.6",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-localstorage": "^0.4.1",
-    "redux-thunk": "^2.2.0"
-  }
+	"name": "aspire-webpack",
+	"version": "1.0.0",
+	"description": "Webpack project starter kit",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Aspirationtocode/aspire-webpack"
+	},
+	"scripts": {
+		"lint": "eslint ./src/scripts/**/*.js",
+		"dev": "webpack-dev-server --host 192.168.0.75",
+		"server": "nodemon ./src/server index.js",
+		"prod": "rimraf ./dist/* && cross-env NODE_ENV=production webpack -p"
+	},
+	"author": "Evgeny Kulazhskiy",
+	"license": "ISC",
+	"devDependencies": {
+		"autoprefixer-loader": "^3.2.0",
+		"babel-core": "^6.24.0",
+		"babel-loader": "^6.4.1",
+		"babel-preset-env": "^1.2.2",
+		"babel-preset-react": "^6.24.1",
+		"cross-env": "^3.2.4",
+		"css-loader": "^0.27.3",
+		"css-sourcemaps-webpack-plugin": "^1.0.3",
+		"eslint": "^3.19.0",
+		"eslint-config-airbnb": "^14.1.0",
+		"eslint-config-airbnb-base": "^11.1.2",
+		"eslint-plugin-import": "^2.2.0",
+		"eslint-plugin-jsx-a11y": "^4.0.0",
+		"eslint-plugin-react": "^6.10.3",
+		"extract-text-webpack-plugin": "^2.1.0",
+		"file-loader": "^0.11.0",
+		"html-loader": "^0.4.5",
+		"html-webpack-plugin": "^2.28.0",
+		"react-dom": "^15.5.3",
+		"style-loader": "^0.16.0",
+		"stylus": "^0.54.5",
+		"stylus-loader": "^3.0.1",
+		"webpack": "^2.3.1",
+		"webpack-dev-server": "^2.4.2"
+	},
+	"browsers": {
+		"android": 4,
+		"chrome": 42,
+		"firefox": 37,
+		"ie": 10,
+		"ios": 7,
+		"opera": 28,
+		"safari": 7
+	},
+	"dependencies": {
+		"axios": "^0.17.1",
+		"eslint-config-prettier": "^2.7.0",
+		"material-ui": "^0.19.4",
+		"object-assign": "^4.1.1",
+		"prop-types": "^15.6.0",
+		"react": "15.5.3",
+		"react-custom-scrollbars": "^4.2.1",
+		"react-redux": "^5.0.6",
+		"react-router": "^4.2.0",
+		"react-router-dom": "^4.2.2",
+		"react-router-redux": "5.0.0-alpha.6",
+		"redux": "^3.7.2",
+		"redux-devtools-extension": "^2.13.2",
+		"redux-localstorage": "^0.4.1",
+		"redux-thunk": "^2.2.0"
+	}
 }
