--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"scripts": {
 		"lint": "eslint ./src/scripts/**/*.js",
 		"dev": "webpack-dev-server --host 192.168.0.75",
-		"server": "nodemon ./src/server index.js",
+		"server": "nodemon server.js",
 		"prod": "rimraf ./dist/* && cross-env NODE_ENV=production webpack -p"
 	},
 	"author": "Evgeny Kulazhskiy",
