--- a/package.json
+++ b/package.json
@@ -66,6 +66,11 @@
 		"redux-devtools-extension": "^2.13.2",
 		"redux-localstorage": "^0.4.1",
 		"redux-thunk": "^2.2.0",
-		"socket.io-client": "^2.0.4"
+		"socket.io-client": "^2.0.4",
+		"body-parser": "^1.18.2",
+		"cors": "^2.8.4",
+		"express": "^4.16.2",
+		"mongoose": "^4.12.3",
+		"socket.io": "^2.0.4"
 	}
 }
